# django-getpaid

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  requirements_test.txt  tox.ini
.github/workflows/: ci.yml
docs/: changelog.rst
getpaid/: models.py  views.py
getpaid/backends/dummy/: apps.py
getpaid/backends/payu/: apps.py
getpaid/backends/transfer/: apps.py
getpaid/rest_framework/: views.py
tests/: factories.py  settings.py
tests/dummy/: factories.py
tests/payu/: factories.py
tests/transfer/: factories.py
