[tool.poetry]
name = "django-getpaid"
version = "4.2.1"
description = "Multi-broker payment processor for Django."
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]
license = "MIT"
readme = "README.rst"
documentation = "https://django-getpaid.readthedocs.io/"
repository = "https://github.com/django-getpaid/django-getpaid"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale"
]
packages = [
    { include = "getpaid" }
]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=4.2"
django-model-utils = "^5.0.0"
pendulum = "^3.0.0"
swapper = "^1.4.0"
django-fsm = "^2.8.2"
typing-extensions = "^4.0.0"
djangorestframework = "^3.15.2"

[tool.poetry.dev-dependencies]
tox = "^4.23.1"
factory-boy = "^3.2.1"
ipdb = "^0.13.13"
pre-commit = "^3.4.0"
pytest = {version = "^8.3.3", optional=true, extras = ["test"]}
codecov = {version="^2.1.13", optional=true, extras = ["test"]}
coverage = {version="^7.6.4", optional=true, extras = ["test"]}
requests = {version = "^2.32.3", optional = true, extras = ["test"]}
requests-mock = {version="^1.12.1", optional=true, extras = ["test"]}
pytest-cov = {version = "^5.0.0", optional = true, extras = ["test"]}
pytest-django = {version = "^4.9.0", optional = true, extras = ["test"]}
sphinx = {version = "^7.2.6", optional = true, extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.3.0", optional = true, extras = ["docs"]}
black = "^24.10.0"
isort = "^5.12.0"
graphviz = {version = "^0.20.1", optional = true, extras = ["graph"]}
pytest-factoryboy = {version = "^2.5.0", optional = true, extras = ["test"]}
readme-renderer = "^37.3"
monkeytype = "^23.3.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]
graph = ["graphviz"]
test = ["pytest", "codecov", "coverage", "request-mock", "pytest-cov", "pytest-django", "requests", "pytest-factoryboy"]

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.cache
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | docs
    | migrations
  )/

)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
known_first_party = ["getpaid"]
known_third_party = ["django", "django_fsm", "factory", "orders", "paywall", "pendulum", "pytest", "pytest_factoryboy", "requests", "rest_framework", "swapper", "typing_extensions"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
